test/1.4/errors/T_ESYNTAX_switch_noncompound.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;
device test;

method init() {
    switch (x)
        // must be compound
        /// ERROR ESYNTAX
        while(true) {
        case 4: ;
        }
}
